gpu: Forbid aliasing inactive attributes in GLSL 3+

The GLSL 3.00.6 spec forbids aliasing of attributes even if they are
inactive. Earlier versions of GLSL still allow it. This mirrors an ANGLE
change: http://crrev.com/c/1005077

Fixes WebGL conformance test
conformance2/attribs/gl-bindAttribLocation-aliasing-inactive.html

Bug: 829541
Change-Id: I8163c3fac3ca7b5b0c6efd9f9a88b9f92c2d19f6
Reviewed-on: https://chromium-review.googlesource.com/c/1359413
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: James Darpinian <jdarpinian@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613362}
Former-commit-id: d7c66cacbca6f9085e5b89b24948ae8a70ddb3ca